# Parallel-Programming-C

./: CMakeLists.txt  README.md  a.out
mpi/: a.out  demo01.c  demo02.c  demo03.c  demo04.c  demo05.c  test.c
mpi/homework/: 3.11.c  3.12.c  3.13.c  3.17.c  3.18.c  3.19.c  3.19b.c  3.2.c  3.20.c  3.26.c  3.28.c  3.4.c  3.9.c  a.out  test.c
mpi/proHomeowrk/: 3.2.c  3.3.c  3.4.c  3.5.c  3.6.c  3.7.c  3.8.c  a.out
opm/: a.out  demo01.c  demo02.c  demo03.c  demo04.c
opm/homework/: 5.1.c  5.6.c  5.9.c  a.out
opm/pro_homework/: 5.1.c  5.2.c  5.3.c  5.4.c  5.5.c  5.6.c  a.out  test.c
pthread/: a.out  demo01.c  demo02.c  demo03.c  demo04.c  pth_hello  test
pthread/homework/: 4.1.c  4.11.c  4.4.c  4.5.c  4.6.c  4.7.c  4.7cp.c  4.9.c  test
pthread/homework/test.dSYM/Contents/Resources/DWARF/: test
pthread/proHomework/: 4.1.c  4.2.c  4.3.c  4.4.c  4.5.c  a.out  penmp  test  test.c
pthread/proHomework/test.dSYM/Contents/Resources/DWARF/: test
pthread/pth_hello.dSYM/Contents/Resources/DWARF/: pth_hello
pthread/test.dSYM/Contents/Resources/DWARF/: test
